# geoaoi-pro

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  LICENSE  README.md  SOURCES.md  UPSTREAM.md  install.ps1  install.sh  layman.md  pyproject.toml
cognis_mil/: __init__.py  audit.py  classmark.py  cli.py  exporters.py  models.py
demos/: 01-aoi.geojson  SCENARIO.md
docs/: INSTALL.md
examples/: help.txt  version.txt
geoaoi_pro/: __init__.py  __main__.py  cli.py  connect.py  core.py
tests/: test_connect.py  test_hardening.py  test_smoke.py
